# financial-asset-relationship-db

./: .coderabbit-config-guide.md  .coderabbit.yaml  .deepsource.toml  .git_commit_message.txt  .gitignore  .kilocodemodes  .mergify.yml  .pre-commit-config.yaml  .safety-policy.json  .test_generation_complete  ADDITIONAL_COMPREHENSIVE_TEST_REPORT.md  ADDITIONAL_COMPREHENSIVE_TEST_SUMMARY.md  ADDITIONAL_TESTS_SUMMARY.md  ADDITIONAL_UNIT_TESTS_GENERATED.md  ADDITIONAL_WORKFLOW_TESTS_SUMMARY.md  AI_RULES.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUTO_ASSIGN_TEST_DOCUMENTATION.md  AXIOS_TESTS_QUICK_REFERENCE.md  AXIOS_UPGRADE_TEST_REPORT.md  BEARER_WORKFLOW_TEST_SUMMARY.md  BRANCH_CLEANUP_ANALYSIS.md  BRANCH_CLEANUP_QUICK_REFERENCE.md  BRANCH_CLEANUP_SUMMARY.md  BRANCH_TEST_COVERAGE_ANALYSIS.md  BRANCH_TEST_GENERATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_BRANCH_CLEANUP.md  CNAME  CODEBASE_OVERVIEW.md  COMPLETE_TEST_GENERATION_REPORT.md  COMPLETE_TEST_GENERATION_SUMMARY.md  COMPLETE_TEST_QUICK_REFERENCE.md  COMPREHENSIVE_ADDITIONAL_TESTS_SUMMARY.md  COMPREHENSIVE_AUTO_ASSIGN_TEST_SUMMARY.md  COMPREHENSIVE_BRANCH_TEST_GENERATION_SUMMARY.md  COMPREHENSIVE_TEST_ASSESSMENT_FINAL.md  COMPREHENSIVE_TEST_GENERATION_COMPLETE.md  COMPREHENSIVE_TEST_GENERATION_FINAL.md  (+149 more)
.circleci/: config.yml
.elastic-copilot/memory/: activeContext.md  dependencyMatrix.md  implementationPlan.md  progress.md  systemManifest.md
.github/: CIRCLECI_SETUP.md  PR_AGENT_README.md  codesherlock.yam  codesherlock.yaml  copilot-instructions.md  copilot-pr-agent.md  pr-agent-config.yml  pr-copilot-config.yml
.github/codeql/: codeql-config.yml
.github/instructions/: codacy.instructions.md
.github/pr-copilot/: IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  README.md  SETUP.md  SUMMARY.md  TESTING.md
.github/scripts/: README.md  context_chunker.py  context_chunker_improved.py
.github/workflows/: apisec-scan.yml  auto-assign.yml  autofix.yml  bandit.yml  bearer.yml  checkmarx-one.yml  checkmarx.yml  ci.yml  codecov.yaml  codeflash.yaml  codeql.yml  codescan.yml  debricked.yml  devskim.yml  docker.yml  eslint.yml  greetings.yml  label.yml  mcp-check.yml  njsscan.yml  ossar.yml  osv-scanner.yml  pmd.yml  pr-agent.yml  pr-copilot.yml  python-app.yml  python-package.yml  scorecard.yml  snyk-container.yml  snyk-infrastructure.yml  snyk-security.yml  soos-dast-scan.yml  zscaler-iac-scan.yml
.kilocode/: mcp.json
.openhands/microagents/: pr-review-handler.md  repo_eng_agent.md  repo_engineer_lead.md
api/: auth.py  database.py  main.py
branch_reviews/: gitauto-issue-133-review.md
docs/: DashFin-financial-asset-relationship-db-wiki-v2.md  coding-guidelines.md  tech_spec.md
docs/html/: ADDITIONAL__TESTS__SUMMARY_8md.html  ADDITIONAL__WORKFLOW__TESTS__SUMMARY_8md.html  AI__RULES_8md.html  ARCHITECTURE_8md.html  AUDIT__REPORT_8md.html  AUTO__ASSIGN__TEST__DOCUMENTATION_8md.html  AXIOS__TESTS__QUICK__REFERENCE_8md.html  AXIOS__UPGRADE__TEST__REPORT_8md.html  BRANCH__CLEANUP__ANALYSIS_8md.html  BRANCH__CLEANUP__QUICK__REFERENCE_8md.html  BRANCH__CLEANUP__SUMMARY_8md.html  BRANCH__TEST__COVERAGE__ANALYSIS_8md.html  BRANCH__TEST__GENERATION__SUMMARY_8md.html  CHANGELOG_8md.html  (+2026 more)
frontend/: .eslintrc.json  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js
src/: workflow_validator.py
tests/: README.md  __init__.py  conftest.py
(+1103 files in other folders)
