[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-asset-relationship-db"
version = "1.0.0"
description = "Financial Asset Relationship Network visualization application"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["finance", "assets", "relationships", "visualization", "gradio"]

authors = [
  { name = "Financial Asset Team" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "gradio>=4.1.2",
  "plotly>=5.0.0",
  "numpy>=1.21.0",
  "dataclasses-json>=0.5.7",
  "yfinance>=0.2.0",
  "requests>=2.28.0",
  "pandas>=1.5.0",
  "PyJWT>=2.8.0",
  "passlib[bcrypt]>=1.7.4",
  "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "ruff>=0.4.0",
  "mypy>=1.0.0",
]

# -------------------------
# Pytest
# -------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow running tests",
]

# -------------------------
# Coverage
# -------------------------

[tool.coverage.run]
source = ["src"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

# -------------------------
# Formatting
# -------------------------

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]

# -------------------------
# Ruff (primary linter)
# -------------------------

[tool.ruff]
line-length = 88
target-version = "py310"

select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # import sorting
  "B",    # bugbear
  "C4",   # comprehensions
  "UP",   # pyupgrade
  "PT",   # pytest style
  "SIM",  # simplifications
  "RUF",  # ruff-specific
]

ignore = [
  "D203",  # incompatible with D211
  "D213",  # incompatible with D212
]

[tool.ruff.pydocstyle]
convention = "pep257"

# -------------------------
# Mypy
# -------------------------

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "gradio.*",
  "plotly.*",
  "yfinance.*",
  "dataclasses_json.*",
]
ignore_missing_imports = true

# -------------------------
# Security
# -------------------------

[tool.bandit]
skips = ["B101"]  # asserts are correct for pytest

# -------------------------
# Codeflash
# -------------------------

[tool.codeflash]
module-root = "."
tests-root = "tests"
test-framework = "pytest"
disable-telemetry = true
formatter-cmds = ["disabled"]
